[package]
name = "kakarot_snippet"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.5"
alloy-primitives = "0" # Pull same version as alloy consensus
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.1.0" }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" } # This is the README recommended way: no branch, no tag ...
starknet_api = "0.11"
tokio = { version = "1.0", features = [ "full" ] }
num-bigint = "0" # Pull same version as starknet
